<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/main_title"
            style="@style/TextViewForm"
            android:gravity="center_horizontal"
            android:text="@string/main_title"
            android:textAlignment="center"
            android:textIsSelectable="false"
            android:textColor="@color/black"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/edit_Dist_Inicial"
            style="@style/TextViewForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/km_inicial"
            android:background="@drawable/edittextform"
            android:inputType="number"
            android:paddingLeft="10px"

            android:singleLine="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ex.: 120000" />

        <EditText
            android:id="@+id/edit_Dist_Final"
            style="@style/TextViewForm"
            android:hint="@string/km_final"
            android:background="@drawable/edittextform"
            android:inputType="number"
            android:paddingLeft="10px"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ex.: 120500" />


        <EditText
            android:id="@+id/editText_liters"
            style="@style/TextViewForm"
            android:hint="@string/hint_liters"
            android:background="@drawable/edittextform"
            android:inputType="number"
            android:paddingLeft="10px"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ex.: 40" />

        <Button
            android:id="@+id/btn_calc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/btn_calc" />

    </LinearLayout>


</ScrollView>